--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="text" id ="player" placeholder="Enter Your Name" class="form-control w-50 m-auto">
         <input type="button" value="Start Quiz" class="btn btn-dark mt-3 m-auto d-block">
     </div>
+
     <!-- ================ Quiz Box ================ -->
     <div id="quizBox" class="bg-light p-5 shadow-lg">
         <div class="row">
@@ -61,6 +62,12 @@
                 <input type="button" value="Next" id="next" class="btn btn-outline-dark w-50 float-end">
             </div>
         </div>
+    </div>
+
+    <!-- ================ Restart Quiz ================ -->
+    <div id="restartQuiz" class="bg-light p-5 shadow-lg">
+        <h3 id="finalPts" class="text-center">Final Points: 0</h3>
+        <input type="button" value="Restart Quiz" id="restartQuizBtn" class="btn btn-dark m-auto d-block mt-3">
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.js"></script>
