Project done, 50-50 Lifeline is left

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="text-center">Quiz</h1>
         <hr class="mb-5">
         <input type="text" id ="player" placeholder="Enter Your Name" class="form-control w-50 m-auto">
-        <input type="button" value="Start Quiz" class="btn btn-dark mt-3 m-auto d-block">
+        <input type="button" value="Start Quiz" class="btn btn-dark mt-3 m-auto d-block" id="startQuizBtn">
     </div>
 
     <!-- ================ Quiz Box ================ -->
@@ -71,5 +71,6 @@
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
