--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <h4 id="qNo">Question No. 0/0</h4>
             </div>
             <div class="col">
+                <input type="button" value="50/50" id="lifeline" class="btn btn-info w-50 d-block m-auto">
+            </div>
+            <div class="col">
                 <input type="button" value="Next" id="next" class="btn btn-outline-dark w-50 float-end">
             </div>
         </div>
